--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "react-minimal",
+  "name": "react-webcomponents",
+  "description": "Some examples of integrating Web Components within a React application.",
+  "displayName": "React & Web Components",
   "version": "1.0.1",
   "main": "index.js",
-  "homepage": "https://github.com/moebiusmania/react-minimal",
-  "repository": "git@github.com:moebiusmania/react-minimal.git",
+  "homepage": "https://github.com/moebiusmania/react-webcomponents",
+  "repository": "git@github.com:moebiusmania/react-webcomponents.git",
   "author": "Salvatore Laisa <moebiusmania@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -13,9 +15,12 @@
     "build:deploy": "npm run build & npm run deploy"
   },
   "dependencies": {
+    "echarts": "^4.0.4",
     "normalize.css": "^8.0.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
