--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "webpack-dev-server --hot",
     "build": "NODE_ENV=production webpack",
     "deploy": "gh-pages -d ./dist",
-    "build:deploy": "npm run build & npm run deploy"
+    "build:deploy": "npm run build && npm run deploy"
   },
   "dependencies": {
     "@webcomponents/webcomponentsjs": "^1.1.1",
