--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-webcomponents",
   "description": "Some examples of integrating Web Components within a React application.",
   "displayName": "React & Web Components",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "homepage": "https://github.com/moebiusmania/react-webcomponents",
   "repository": "git@github.com:moebiusmania/react-webcomponents.git",
@@ -12,7 +12,7 @@
     "start": "webpack-dev-server --hot",
     "build": "NODE_ENV=production webpack",
     "deploy": "gh-pages -d ./dist",
-    "build:deploy": "npm run build && npm run deploy"
+    "build:deploy": "NODE_ENV=production npm run build && npm run deploy"
   },
   "dependencies": {
     "echarts": "4.1.0",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.3.3",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/preset-env": "7.3.1",
     "@babel/preset-react": "7.0.0",
     "babel-loader": "8.0.5",
