--- a/package.json
+++ b/package.json
@@ -1,42 +1,38 @@
 {
   "name": "react-webcomponents",
   "description": "Some examples of integrating Web Components within a React application.",
-  "displayName": "React & Web Components",
-  "version": "1.0.2",
-  "main": "index.js",
+  "private": false,
+  "version": "2.0.0",
   "homepage": "https://github.com/moebiusmania/react-webcomponents",
   "repository": "git@github.com:moebiusmania/react-webcomponents.git",
   "author": "Salvatore Laisa <moebiusmania@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --hot",
-    "build": "NODE_ENV=production webpack",
-    "deploy": "gh-pages -d ./dist",
-    "build:deploy": "NODE_ENV=production npm run build && npm run deploy"
+    "dev": "NODE_ENV=development vite",
+    "build": "NODE_ENV=production tsc && vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "echarts": "4.1.0",
-    "normalize.css": "8.0.1",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-router": "4.3.1",
-    "react-router-dom": "4.3.1"
+    "@tailwindcss/typography": "^0.5.2",
+    "daisyui": "^2.18.0",
+    "echarts": "^5.3.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@babel/core": "7.3.3",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/preset-env": "7.3.1",
-    "@babel/preset-react": "7.0.0",
-    "babel-loader": "8.0.5",
-    "css-loader": "2.1.0",
-    "gh-pages": "2.0.1",
-    "html-webpack-plugin": "3.2.0",
-    "node-sass": "4.11.0",
-    "sass-loader": "7.1.0",
-    "style-loader": "0.23.1",
-    "webpack": "4.29.5",
-    "webpack-cli": "3.2.3",
-    "webpack-dev-server": "3.2.1",
-    "webpack-notifier": "1.7.0"
+    "@types/echarts": "^4.9.15",
+    "@types/node": "18.0.1",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.7",
+    "gh-pages": "4.0.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.9"
   }
 }
