--- a/package.json
+++ b/package.json
@@ -15,24 +15,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.2",
-    "daisyui": "^2.18.0",
-    "echarts": "^5.3.3",
+    "@tailwindcss/typography": "0.5.9",
+    "daisyui": "3.0.20",
+    "echarts": "5.4.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "6.12.1"
   },
   "devDependencies": {
-    "@types/echarts": "^4.9.15",
-    "@types/node": "18.0.1",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "autoprefixer": "^10.4.7",
-    "gh-pages": "4.0.0",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "@types/echarts": "4.9.18",
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.9",
+    "@types/react-dom": "18.2.4",
+    "@vitejs/plugin-react": "4.0.0",
+    "autoprefixer": "10.4.14",
+    "gh-pages": "5.0.0",
+    "postcss": "8.4.24",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.3",
+    "vite": "4.3.9"
   }
 }
